--- a/src/styles.css
+++ b/src/styles.css
@@ -72,10 +72,15 @@
   
   .apply-btn {
     position:fixed;
-    left:0px;
     font-size: 30px;
     bottom:10px;
     height:50px;
     width:100%;
     background:rgb(118, 156, 88);
+  }
+
+  .center {
+    margon: auto;
+    width: 50%;
+    padding: 10px;
   }
