--- a/src/styles.css
+++ b/src/styles.css
@@ -2,16 +2,13 @@
     font-family: "Noto Sans", sans-serif;
   }
  
- .checkbox {
-    width: 18px;
-    height: 18px;
+  body {
+    margin: 0px ;
+    padding-top: 10px
   }
-
-  table {
-    text-align: left;
+ .half {
+    width: 50%;
     float: left;
-    table-layout: fixed;
-    bottom: 200px;
   }
   
   th, td {
@@ -34,36 +31,13 @@
     padding-left: 20px;
     border-left: 5px solid #333;
     border-top: 5px solid #333;
-    border-bottom: 5px solid #333;
-    height: 98%;
+    height: 100%;
     float: right;
     right: 0;
     top: 0;
     bottom: 0;
   }
-  
-  .checkmark {
-    display: inline-block;
-    width: 20px;
-    height: 20px;
-    border: 2px solid #000;
-    border-radius: 50%;
-    position: relative; /* added property */
-    top: 6px; /* added property */
-  }
-  
-  .checkmark.maintained::before {
-    content: '';
-    display: block;
-    width: 6px;
-    height: 12px;
-    border-right: 2px solid #000;
-    border-bottom: 2px solid #000;
-    transform: rotate(45deg);
-    position: relative;
-    left: 6px; /* increase the value of left property */
-    top: 2px; /* decrease the value of top property */
-  }
+
   
   
   .checkmark.not-maintained {
@@ -71,16 +45,22 @@
   }
   
   .apply-btn {
-    position:fixed;
     font-size: 30px;
-    bottom:10px;
     height:50px;
-    width:100%;
     background:rgb(118, 156, 88);
   }
 
+
+
   .center {
-    margon: auto;
-    width: 50%;
-    padding: 10px;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    position: fixed;
+    display: flex;
+    justify-content: center;
+  }
+
+  .checkmark:after {
+    content: "\2713\0020";
   }
