--- a/src/styles.css
+++ b/src/styles.css
@@ -26,7 +26,7 @@
   
   .side-window {
     width: 50%;
-    position: absolute;
+    position: fixed;
     background-color: rgba(0, 0, 0, 0.1);
     padding-left: 20px;
     border-left: 5px solid #333;
