--- a/src/styles.css
+++ b/src/styles.css
@@ -64,3 +64,41 @@
   .checkmark:after {
     content: "\2713\0020";
   }
+
+  .search-container {
+    display: flex;
+    align-items: center;
+  }
+  
+  .sort-container {
+    display: flex;
+    align-items: center;
+  }
+  
+  input.search-input, button.sort-button{
+    display: inline-block;
+  }
+
+  .overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+    display: none;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #0000009c;
+  z-index: 1;
+  display: none;
+  backdrop-filter: blur(4px);
+}
+
